--- a/app/src/main/res/layout/activity_student_report.xml
+++ b/app/src/main/res/layout/activity_student_report.xml
@@ -48,15 +48,21 @@
                 <Spinner
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
+                    android:layout_margin="5dp"
                     android:id="@+id/spinner_class"
                     />
 
                 <Spinner
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
+                    android:layout_margin="5dp"
                     android:id="@+id/spinner_term"
+                    />
+                <Spinner
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:id="@+id/spinner_year"
                     />
             </LinearLayout>
 
